jjt/Program.jjt
options
{
 LOOKAHEAD=3;
 FORCE_LA_CHECK=true;
}

PARSER_BEGIN(Program)

public class Program
{
    public static void main(String args[]) throws ParseException {
        Program myProg = new Program(System.in);
        SimpleNode root = myProg.Program(); // devolve referência para o nó raiz da árvore
        root.dump(""); // imprime no ecrã a árvore
    }
}
PARSER_END(Program)

SKIP : {
    " " | "\r" | "\t" | "\n"
}

TOKEN: {
    <INTEGER: (["0" - "9"])+ >
    |
    <PUBLIC: "public">
    |
    <STATIC: "static">
    |
    <VOID: "void">
    |
    <MAIN: "main">
    |
    <CLASS: "class">
    |
    <EXTENDS: "extends">
    |
    <INT: "int">
    |
    <BOOLEAN: "boolean">
    |
    <STRING: "String">
    |
    <RETURN: "return">
    |
    <IF: "if">
    |
    <ELSE: "else">
    |
    <WHILE: "while">
    |
    <NEW: "new">
    |
    <THIS: "this">
    |
    <TRUE: "true">
    |
    <FALSE: "false">
    |
    <LENGTH: "length">
    |
    <IDENTIFIER: ["A"-"Z","a"-"z","$","_"](["0"-"9","A"-"Z","a"-"z","_","$"])*>
    |
    <LEFTKEY: "{">
    |
    <RIGHTKEY: "}">
    |
    <LSB: "[">  // Left Square Bracket
    |
    <RSB: "]">  // Right Square Bracket
    |
    <COMMA: ",">
    |
    <SEMICOLON: ";">
    |
    <LCB: "(">  // Left Curved Bracket
    |
    <RCB: ")">  // Right Curved Bracket
    |
    <EQUAL: "=">
    |
    <AND: "&&">
    |
    <LT: "<">
    |
    <SUM: "+">
    |
    <SUB: "-">
    |
    <MUL: "*">
    |
    <DIV: "/">
    |
    <EXC: "!">
    |
    <POINT: ".">
}

SimpleNode Program(): {}
{
    ClassDeclaration()<EOF> {return jjtThis;}
}

void ClassDeclaration(): {}
{
    <CLASS> 
    <IDENTIFIER>
    (<EXTENDS><IDENTIFIER>)?
    <LEFTKEY>
    (VarDeclaration())*
    (Declaration())*
    <RIGHTKEY>
}

void Declaration(): {}
{
    <PUBLIC>(MainDeclaration() | MethodDeclaration())
}

void VarDeclaration(): {}
{
    Type()
    <IDENTIFIER>
    <SEMICOLON>
}   

void MainDeclaration(): {}
{
    <STATIC>
    <VOID>
    <MAIN>
    <LCB>
    <STRING>
    <LSB>
    <RSB>
    <IDENTIFIER>
    <RCB>
    <LEFTKEY>
    (VarDeclaration())*
    (Statement())*
    <RIGHTKEY>
}

void MethodDeclaration(): {}
{
    Type()
    <IDENTIFIER>
    <LCB>
    (Type()<IDENTIFIER>(<COMMA>Type()<IDENTIFIER>)*)?   
    <RCB>
    <LEFTKEY>
    (VarDeclaration())*
    (Statement())*
    <RETURN>
    Expression()
    <SEMICOLON>
    <RIGHTKEY>
}

void Type(): {}
{
    Int()
    |
    <BOOLEAN>
    |
    <IDENTIFIER>
}

void Int(): {}
{
    <INT>(<LSB><RSB>)?
}

void Statement() : {}
{
    <LEFTKEY>
    (Statement())*
    <RIGHTKEY>
    |
    <IF>{System.out.println("line 180");}<LCB>Expression()<RCB>Statement()<ELSE>Statement()
    |
    <WHILE><LCB>Expression()<RCB>Statement()
    |
    Expression()<SEMICOLON>
    |
    <IDENTIFIER><EQUAL>Expression()<SEMICOLON>
    |
    <IDENTIFIER><LSB>Expression()<RSB><EQUAL>Expression()<SEMICOLON>
}

void Expression() : {}
{
    ExpressionTerminals(){System.out.println("line 193");}ExpressionL()
}

void ExpressionL(): {System.out.println("expressionL"); Token t;}
{
    (t=(<AND>|<LT>|<SUM>|<SUB>|<MUL>|<DIV>)){Expression()
    |
    (t=<LSB>)Expression()<RSB>
    |
    (t=Point())
}

void Point(): {}
{
    <POINT>AfterPoint()
}

void AfterPoint(): {}
{
    <LENGTH>
    |
    <IDENTIFIER><LCB>(Expression() (<COMMA>Expression())*)<RCB>
}

void New(): {} 
{
    <NEW>AfterNew()
}

void AfterNew(): {} 
{
    <INT><LSB>Expression()<RSB>
    |
    <IDENTIFIER><LCB><RCB>
}

void ExpressionTerminals(): {}
{

    /*<IDENTIFIERLITERAL>
    |*/
    <TRUE>
    |
    <FALSE>
    |
    <THIS>
    |
    New()
    |
    <EXC>Expression()
    |
    <LCB>Expression()<RCB>
    |
    <IDENTIFIER>{System.out.println("line 246");}
}
