compiled/Program.java
/* Program.java */
/* Generated By:JJTree&JavaCC: Do not edit this line. Program.java */
public class Program/*@bgen(jjtree)*/implements ProgramTreeConstants, ProgramConstants {/*@bgen(jjtree)*/
  protected static JJTProgramState jjtree = new JJTProgramState();public static void main(String args[]) throws ParseException {
    Program myProg = new Program(System.in);
    SimpleNode root = myProg.Program(); // devolve referência para o nó raiz da árvore
    root.dump(""); // imprime no ecrã a árvore
 }

  static final public SimpleNode Program() throws ParseException {
    trace_call("Program");
    try {/*@bgen(jjtree) Program */
  SimpleNode jjtn000 = new SimpleNode(JJTPROGRAM);
  boolean jjtc000 = true;
  jjtree.openNodeScope(jjtn000);
  jjtn000.jjtSetFirstToken(getToken(1));
      try {
        ClassDeclaration();
        jj_consume_token(0);
jjtree.closeNodeScope(jjtn000, true);
                              jjtc000 = false;
                              jjtn000.jjtSetLastToken(getToken(0));
{if ("" != null) return jjtn000;}
      } catch (Throwable jjte000) {
if (jjtc000) {
        jjtree.clearNodeScope(jjtn000);
        jjtc000 = false;
      } else {
        jjtree.popNode();
      }
      if (jjte000 instanceof RuntimeException) {
        {if (true) throw (RuntimeException)jjte000;}
      }
      if (jjte000 instanceof ParseException) {
        {if (true) throw (ParseException)jjte000;}
      }
      {if (true) throw (Error)jjte000;}
      } finally {
if (jjtc000) {
        jjtree.closeNodeScope(jjtn000, true);
        jjtn000.jjtSetLastToken(getToken(0));
      }
      }
    throw new Error("Missing return statement in function");
    } finally {
      trace_return("Program");
    }
  }

  static final public void ClassDeclaration() throws ParseException {
    trace_call("ClassDeclaration");
    try {/*@bgen(jjtree) ClassDeclaration */
  SimpleNode jjtn000 = new SimpleNode(JJTCLASSDECLARATION);
  boolean jjtc000 = true;
  jjtree.openNodeScope(jjtn000);
  jjtn000.jjtSetFirstToken(getToken(1));
      try {
        jj_consume_token(CLASS);
        jj_consume_token(IDENTIFIER);
        if (jj_2_1(3)) {
          jj_consume_token(EXTENDS);
          jj_consume_token(IDENTIFIER);
        } else {
          ;
        }
        jj_consume_token(LEFTKEY);
        label_1:
        while (true) {
          if (jj_2_2(3)) {
            ;
          } else {
            break label_1;
          }
          VarDeclaration();
        }
        label_2:
        while (true) {
          if (jj_2_3(3)) {
            ;
          } else {
            break label_2;
          }
          Declaration();
        }
        jj_consume_token(RIGHTKEY);
      } catch (Throwable jjte000) {
if (jjtc000) {
        jjtree.clearNodeScope(jjtn000);
        jjtc000 = false;
      } else {
        jjtree.popNode();
      }
      if (jjte000 instanceof RuntimeException) {
        {if (true) throw (RuntimeException)jjte000;}
      }
      if (jjte000 instanceof ParseException) {
        {if (true) throw (ParseException)jjte000;}
      }
      {if (true) throw (Error)jjte000;}
      } finally {
if (jjtc000) {
        jjtree.closeNodeScope(jjtn000, true);
        jjtn000.jjtSetLastToken(getToken(0));
      }
      }
    } finally {
      trace_return("ClassDeclaration");
    }
  }

  static final public void Declaration() throws ParseException {
    trace_call("Declaration");
    try {/*@bgen(jjtree) Declaration */
  SimpleNode jjtn000 = new SimpleNode(JJTDECLARATION);
  boolean jjtc000 = true;
  jjtree.openNodeScope(jjtn000);
  jjtn000.jjtSetFirstToken(getToken(1));
      try {
        jj_consume_token(PUBLIC);
        if (jj_2_4(3)) {
          MainDeclaration();
        } else if (jj_2_5(3)) {
          MethodDeclaration();
        } else {
          jj_consume_token(-1);
          throw new ParseException();
        }
      } catch (Throwable jjte000) {
if (jjtc000) {
        jjtree.clearNodeScope(jjtn000);
        jjtc000 = false;
      } else {
        jjtree.popNode();
      }
      if (jjte000 instanceof RuntimeException) {
        {if (true) throw (RuntimeException)jjte000;}
      }
      if (jjte000 instanceof ParseException) {
        {if (true) throw (ParseException)jjte000;}
      }
      {if (true) throw (Error)jjte000;}
      } finally {
if (jjtc000) {
        jjtree.closeNodeScope(jjtn000, true);
        jjtn000.jjtSetLastToken(getToken(0));
      }
      }
    } finally {
      trace_return("Declaration");
    }
  }

  static final public void VarDeclaration() throws ParseException {
    trace_call("VarDeclaration");
    try {/*@bgen(jjtree) VarDeclaration */
  SimpleNode jjtn000 = new SimpleNode(JJTVARDECLARATION);
  boolean jjtc000 = true;
  jjtree.openNodeScope(jjtn000);
  jjtn000.jjtSetFirstToken(getToken(1));
      try {
        Type();
        jj_consume_token(IDENTIFIER);
        jj_consume_token(INTEGER);
      } catch (Throwable jjte000) {
if (jjtc000) {
        jjtree.clearNodeScope(jjtn000);
        jjtc000 = false;
      } else {
        jjtree.popNode();
      }
      if (jjte000 instanceof RuntimeException) {
        {if (true) throw (RuntimeException)jjte000;}
      }
      if (jjte000 instanceof ParseException) {
        {if (true) throw (ParseException)jjte000;}
      }
      {if (true) throw (Error)jjte000;}
      } finally {
if (jjtc000) {
        jjtree.closeNodeScope(jjtn000, true);
        jjtn000.jjtSetLastToken(getToken(0));
      }
      }
    } finally {
      trace_return("VarDeclaration");
    }
  }

  static final public void MainDeclaration() throws ParseException {
    trace_call("MainDeclaration");
    try {/*@bgen(jjtree) MainDeclaration */
  SimpleNode jjtn000 = new SimpleNode(JJTMAINDECLARATION);
  boolean jjtc000 = true;
  jjtree.openNodeScope(jjtn000);
  jjtn000.jjtSetFirstToken(getToken(1));
      try {
        jj_consume_token(STATIC);
        jj_consume_token(VOID);
        jj_consume_token(MAIN);
        jj_consume_token(LCB);
        jj_consume_token(STRING);
        jj_consume_token(LSB);
        jj_consume_token(RSB);
        jj_consume_token(IDENTIFIER);
        jj_consume_token(RCB);
        jj_consume_token(LEFTKEY);
        label_3:
        while (true) {
          if (jj_2_6(3)) {
            ;
          } else {
            break label_3;
          }
          VarDeclaration();
        }
        label_4:
        while (true) {
          if (jj_2_7(3)) {
            ;
          } else {
            break label_4;
          }
          Statement();
        }
        jj_consume_token(RIGHTKEY);
      } catch (Throwable jjte000) {
if (jjtc000) {
        jjtree.clearNodeScope(jjtn000);
        jjtc000 = false;
      } else {
        jjtree.popNode();
      }
      if (jjte000 instanceof RuntimeException) {
        {if (true) throw (RuntimeException)jjte000;}
      }
      if (jjte000 instanceof ParseException) {
        {if (true) throw (ParseException)jjte000;}
      }
      {if (true) throw (Error)jjte000;}
      } finally {
if (jjtc000) {
        jjtree.closeNodeScope(jjtn000, true);
        jjtn000.jjtSetLastToken(getToken(0));
      }
      }
    } finally {
      trace_return("MainDeclaration");
    }
  }

  static final public void MethodDeclaration() throws ParseException {
    trace_call("MethodDeclaration");
    try {/*@bgen(jjtree) MethodDeclaration */
  SimpleNode jjtn000 = new SimpleNode(JJTMETHODDECLARATION);
  boolean jjtc000 = true;
  jjtree.openNodeScope(jjtn000);
  jjtn000.jjtSetFirstToken(getToken(1));
      try {
        jj_consume_token(PUBLIC);
        Type();
        jj_consume_token(IDENTIFIER);
        jj_consume_token(LCB);
        if (jj_2_9(3)) {
          Type();
          jj_consume_token(IDENTIFIER);
          label_5:
          while (true) {
            if (jj_2_8(3)) {
              ;
            } else {
              break label_5;
            }
            jj_consume_token(COMMA);
            Type();
            jj_consume_token(IDENTIFIER);
          }
        } else {
          ;
        }
        jj_consume_token(RCB);
        jj_consume_token(LEFTKEY);
        label_6:
        while (true) {
          if (jj_2_10(3)) {
            ;
          } else {
            break label_6;
          }
          VarDeclaration();
        }
        label_7:
        while (true) {
          if (jj_2_11(3)) {
            ;
          } else {
            break label_7;
          }
          Statement();
        }
        jj_consume_token(RETURN);
        Expression();
        jj_consume_token(SEMICOLON);
        jj_consume_token(RIGHTKEY);
      } catch (Throwable jjte000) {
if (jjtc000) {
        jjtree.clearNodeScope(jjtn000);
        jjtc000 = false;
      } else {
        jjtree.popNode();
      }
      if (jjte000 instanceof RuntimeException) {
        {if (true) throw (RuntimeException)jjte000;}
      }
      if (jjte000 instanceof ParseException) {
        {if (true) throw (ParseException)jjte000;}
      }
      {if (true) throw (Error)jjte000;}
      } finally {
if (jjtc000) {
        jjtree.closeNodeScope(jjtn000, true);
        jjtn000.jjtSetLastToken(getToken(0));
      }
      }
    } finally {
      trace_return("MethodDeclaration");
    }
  }

  static final public void Type() throws ParseException {
    trace_call("Type");
    try {/*@bgen(jjtree) Type */
  SimpleNode jjtn000 = new SimpleNode(JJTTYPE);
  boolean jjtc000 = true;
  jjtree.openNodeScope(jjtn000);
  jjtn000.jjtSetFirstToken(getToken(1));
      try {
        if (jj_2_12(3)) {
          Int();
        } else if (jj_2_13(3)) {
          jj_consume_token(BOOLEAN);
        } else if (jj_2_14(3)) {
          jj_consume_token(IDENTIFIER);
        } else {
          jj_consume_token(-1);
          throw new ParseException();
        }
      } catch (Throwable jjte000) {
if (jjtc000) {
        jjtree.clearNodeScope(jjtn000);
        jjtc000 = false;
      } else {
        jjtree.popNode();
      }
      if (jjte000 instanceof RuntimeException) {
        {if (true) throw (RuntimeException)jjte000;}
      }
      if (jjte000 instanceof ParseException) {
        {if (true) throw (ParseException)jjte000;}
      }
      {if (true) throw (Error)jjte000;}
      } finally {
if (jjtc000) {
        jjtree.closeNodeScope(jjtn000, true);
        jjtn000.jjtSetLastToken(getToken(0));
      }
      }
    } finally {
      trace_return("Type");
    }
  }

  static final public void Int() throws ParseException {
    trace_call("Int");
    try {/*@bgen(jjtree) Int */
  SimpleNode jjtn000 = new SimpleNode(JJTINT);
  boolean jjtc000 = true;
  jjtree.openNodeScope(jjtn000);
  jjtn000.jjtSetFirstToken(getToken(1));
      try {
        jj_consume_token(INT);
        if (jj_2_15(3)) {
          jj_consume_token(LSB);
          jj_consume_token(RSB);
        } else {
          ;
        }
      } finally {
if (jjtc000) {
        jjtree.closeNodeScope(jjtn000, true);
        jjtn000.jjtSetLastToken(getToken(0));
      }
      }
    } finally {
      trace_return("Int");
    }
  }

  static final public void Statement() throws ParseException {
    trace_call("Statement");
    try {/*@bgen(jjtree) Statement */
  SimpleNode jjtn000 = new SimpleNode(JJTSTATEMENT);
  boolean jjtc000 = true;
  jjtree.openNodeScope(jjtn000);
  jjtn000.jjtSetFirstToken(getToken(1));
      try {
        if (jj_2_17(3)) {
          jj_consume_token(LEFTKEY);
          label_8:
          while (true) {
            if (jj_2_16(3)) {
              ;
            } else {
              break label_8;
            }
            Statement();
          }
          jj_consume_token(RIGHTKEY);
        } else if (jj_2_18(3)) {
          jj_consume_token(IF);
          jj_consume_token(LCB);
          Expression();
          jj_consume_token(RCB);
          Statement();
          jj_consume_token(ELSE);
          Statement();
        } else if (jj_2_19(3)) {
          jj_consume_token(WHILE);
          jj_consume_token(LCB);
          Expression();
          jj_consume_token(RCB);
          Statement();
        } else if (jj_2_20(3)) {
          Expression();
          jj_consume_token(SEMICOLON);
        } else if (jj_2_21(3)) {
          jj_consume_token(IDENTIFIER);
          jj_consume_token(EQUAL);
          Expression();
          jj_consume_token(SEMICOLON);
        } else if (jj_2_22(3)) {
          jj_consume_token(IDENTIFIER);
          jj_consume_token(LSB);
          Expression();
          jj_consume_token(RSB);
          jj_consume_token(EQUAL);
          Expression();
          jj_consume_token(SEMICOLON);
        } else {
          jj_consume_token(-1);
          throw new ParseException();
        }
      } catch (Throwable jjte000) {
if (jjtc000) {
        jjtree.clearNodeScope(jjtn000);
        jjtc000 = false;
      } else {
        jjtree.popNode();
      }
      if (jjte000 instanceof RuntimeException) {
        {if (true) throw (RuntimeException)jjte000;}
      }
      if (jjte000 instanceof ParseException) {
        {if (true) throw (ParseException)jjte000;}
      }
      {if (true) throw (Error)jjte000;}
      } finally {
if (jjtc000) {
        jjtree.closeNodeScope(jjtn000, true);
        jjtn000.jjtSetLastToken(getToken(0));
      }
      }
    } finally {
      trace_return("Statement");
    }
  }

  static final public void Expression() throws ParseException {
    trace_call("Expression");
    try {/*@bgen(jjtree) Expression */
  SimpleNode jjtn000 = new SimpleNode(JJTEXPRESSION);
  boolean jjtc000 = true;
  jjtree.openNodeScope(jjtn000);
  jjtn000.jjtSetFirstToken(getToken(1));
      try {
        ExpressionTerminals();
        if (jj_2_23(3)) {
          ExpressionL();
        } else {
          ;
        }
      } catch (Throwable jjte000) {
if (jjtc000) {
        jjtree.clearNodeScope(jjtn000);
        jjtc000 = false;
      } else {
        jjtree.popNode();
      }
      if (jjte000 instanceof RuntimeException) {
        {if (true) throw (RuntimeException)jjte000;}
      }
      if (jjte000 instanceof ParseException) {
        {if (true) throw (ParseException)jjte000;}
      }
      {if (true) throw (Error)jjte000;}
      } finally {
if (jjtc000) {
        jjtree.closeNodeScope(jjtn000, true);
        jjtn000.jjtSetLastToken(getToken(0));
      }
      }
    } finally {
      trace_return("Expression");
    }
  }

  static final public void ExpressionL() throws ParseException {
    trace_call("ExpressionL");
    try {/*@bgen(jjtree) ExpressionL */
  SimpleNode jjtn000 = new SimpleNode(JJTEXPRESSIONL);
  boolean jjtc000 = true;
  jjtree.openNodeScope(jjtn000);
  jjtn000.jjtSetFirstToken(getToken(1));
      try {
        if (jj_2_30(3)) {
          if (jj_2_24(3)) {
            jj_consume_token(AND);
          } else if (jj_2_25(3)) {
            jj_consume_token(LT);
          } else if (jj_2_26(3)) {
            jj_consume_token(SUM);
          } else if (jj_2_27(3)) {
            jj_consume_token(SUB);
          } else if (jj_2_28(3)) {
            jj_consume_token(MUL);
          } else if (jj_2_29(3)) {
            jj_consume_token(DIV);
          } else {
            jj_consume_token(-1);
            throw new ParseException();
          }
          Expression();
        } else if (jj_2_31(3)) {
          jj_consume_token(LSB);
          Expression();
          jj_consume_token(RSB);
        } else if (jj_2_32(3)) {
          Point();
        } else {
          jj_consume_token(-1);
          throw new ParseException();
        }
      } catch (Throwable jjte000) {
if (jjtc000) {
        jjtree.clearNodeScope(jjtn000);
        jjtc000 = false;
      } else {
        jjtree.popNode();
      }
      if (jjte000 instanceof RuntimeException) {
        {if (true) throw (RuntimeException)jjte000;}
      }
      if (jjte000 instanceof ParseException) {
        {if (true) throw (ParseException)jjte000;}
      }
      {if (true) throw (Error)jjte000;}
      } finally {
if (jjtc000) {
        jjtree.closeNodeScope(jjtn000, true);
        jjtn000.jjtSetLastToken(getToken(0));
      }
      }
    } finally {
      trace_return("ExpressionL");
    }
  }

  static final public void Point() throws ParseException {
    trace_call("Point");
    try {/*@bgen(jjtree) Point */
  SimpleNode jjtn000 = new SimpleNode(JJTPOINT);
  boolean jjtc000 = true;
  jjtree.openNodeScope(jjtn000);
  jjtn000.jjtSetFirstToken(getToken(1));
      try {
        jj_consume_token(POINT);
        AfterPoint();
      } catch (Throwable jjte000) {
if (jjtc000) {
        jjtree.clearNodeScope(jjtn000);
        jjtc000 = false;
      } else {
        jjtree.popNode();
      }
      if (jjte000 instanceof RuntimeException) {
        {if (true) throw (RuntimeException)jjte000;}
      }
      if (jjte000 instanceof ParseException) {
        {if (true) throw (ParseException)jjte000;}
      }
      {if (true) throw (Error)jjte000;}
      } finally {
if (jjtc000) {
        jjtree.closeNodeScope(jjtn000, true);
        jjtn000.jjtSetLastToken(getToken(0));
      }
      }
    } finally {
      trace_return("Point");
    }
  }

  static final public void AfterPoint() throws ParseException {
    trace_call("AfterPoint");
    try {/*@bgen(jjtree) AfterPoint */
  SimpleNode jjtn000 = new SimpleNode(JJTAFTERPOINT);
  boolean jjtc000 = true;
  jjtree.openNodeScope(jjtn000);
  jjtn000.jjtSetFirstToken(getToken(1));
      try {
        if (jj_2_34(3)) {
          jj_consume_token(LENGTH);
        } else if (jj_2_35(3)) {
          jj_consume_token(IDENTIFIER);
          jj_consume_token(LCB);
          Expression();
          label_9:
          while (true) {
            if (jj_2_33(3)) {
              ;
            } else {
              break label_9;
            }
            jj_consume_token(COMMA);
            Expression();
          }
          jj_consume_token(RCB);
        } else {
          jj_consume_token(-1);
          throw new ParseException();
        }
      } catch (Throwable jjte000) {
if (jjtc000) {
        jjtree.clearNodeScope(jjtn000);
        jjtc000 = false;
      } else {
        jjtree.popNode();
      }
      if (jjte000 instanceof RuntimeException) {
        {if (true) throw (RuntimeException)jjte000;}
      }
      if (jjte000 instanceof ParseException) {
        {if (true) throw (ParseException)jjte000;}
      }
      {if (true) throw (Error)jjte000;}
      } finally {
if (jjtc000) {
        jjtree.closeNodeScope(jjtn000, true);
        jjtn000.jjtSetLastToken(getToken(0));
      }
      }
    } finally {
      trace_return("AfterPoint");
    }
  }

  static final public void New() throws ParseException {
    trace_call("New");
    try {/*@bgen(jjtree) New */
  SimpleNode jjtn000 = new SimpleNode(JJTNEW);
  boolean jjtc000 = true;
  jjtree.openNodeScope(jjtn000);
  jjtn000.jjtSetFirstToken(getToken(1));
      try {
        jj_consume_token(NEW);
        AfterNew();
      } catch (Throwable jjte000) {
if (jjtc000) {
        jjtree.clearNodeScope(jjtn000);
        jjtc000 = false;
      } else {
        jjtree.popNode();
      }
      if (jjte000 instanceof RuntimeException) {
        {if (true) throw (RuntimeException)jjte000;}
      }
      if (jjte000 instanceof ParseException) {
        {if (true) throw (ParseException)jjte000;}
      }
      {if (true) throw (Error)jjte000;}
      } finally {
if (jjtc000) {
        jjtree.closeNodeScope(jjtn000, true);
        jjtn000.jjtSetLastToken(getToken(0));
      }
      }
    } finally {
      trace_return("New");
    }
  }

  static final public void AfterNew() throws ParseException {
    trace_call("AfterNew");
    try {/*@bgen(jjtree) AfterNew */
  SimpleNode jjtn000 = new SimpleNode(JJTAFTERNEW);
  boolean jjtc000 = true;
  jjtree.openNodeScope(jjtn000);
  jjtn000.jjtSetFirstToken(getToken(1));
      try {
        if (jj_2_36(3)) {
          jj_consume_token(INT);
          jj_consume_token(LSB);
          Expression();
          jj_consume_token(RSB);
        } else if (jj_2_37(3)) {
          jj_consume_token(IDENTIFIER);
          jj_consume_token(LCB);
          jj_consume_token(RCB);
        } else {
          jj_consume_token(-1);
          throw new ParseException();
        }
      } catch (Throwable jjte000) {
if (jjtc000) {
        jjtree.clearNodeScope(jjtn000);
        jjtc000 = false;
      } else {
        jjtree.popNode();
      }
      if (jjte000 instanceof RuntimeException) {
        {if (true) throw (RuntimeException)jjte000;}
      }
      if (jjte000 instanceof ParseException) {
        {if (true) throw (ParseException)jjte000;}
      }
      {if (true) throw (Error)jjte000;}
      } finally {
if (jjtc000) {
        jjtree.closeNodeScope(jjtn000, true);
        jjtn000.jjtSetLastToken(getToken(0));
      }
      }
    } finally {
      trace_return("AfterNew");
    }
  }

  static final public void ExpressionTerminals() throws ParseException {
    trace_call("ExpressionTerminals");
    try {/*@bgen(jjtree) ExpressionTerminals */
  SimpleNode jjtn000 = new SimpleNode(JJTEXPRESSIONTERMINALS);
  boolean jjtc000 = true;
  jjtree.openNodeScope(jjtn000);
  jjtn000.jjtSetFirstToken(getToken(1));
      try {
        if (jj_2_38(3)) {
          jj_consume_token(TRUE);
        } else if (jj_2_39(3)) {
          jj_consume_token(FALSE);
        } else if (jj_2_40(3)) {
          jj_consume_token(IDENTIFIER);
        } else if (jj_2_41(3)) {
          jj_consume_token(THIS);
        } else if (jj_2_42(3)) {
          New();
        } else if (jj_2_43(3)) {
          jj_consume_token(EXC);
          Expression();
        } else if (jj_2_44(3)) {
          jj_consume_token(LCB);
          Expression();
          jj_consume_token(RCB);
        } else {
          jj_consume_token(-1);
          throw new ParseException();
        }
      } catch (Throwable jjte000) {
if (jjtc000) {
        jjtree.clearNodeScope(jjtn000);
        jjtc000 = false;
      } else {
        jjtree.popNode();
      }
      if (jjte000 instanceof RuntimeException) {
        {if (true) throw (RuntimeException)jjte000;}
      }
      if (jjte000 instanceof ParseException) {
        {if (true) throw (ParseException)jjte000;}
      }
      {if (true) throw (Error)jjte000;}
      } finally {
if (jjtc000) {
        jjtree.closeNodeScope(jjtn000, true);
        jjtn000.jjtSetLastToken(getToken(0));
      }
      }
    } finally {
      trace_return("ExpressionTerminals");
    }
  }

  static private boolean jj_2_1(int xla)
 {
    jj_la = xla; jj_lastpos = jj_scanpos = token;
    try { return !jj_3_1(); }
    catch(LookaheadSuccess ls) { return true; }
    finally { jj_save(0, xla); }
  }

  static private boolean jj_2_2(int xla)
 {
    jj_la = xla; jj_lastpos = jj_scanpos = token;
    try { return !jj_3_2(); }
    catch(LookaheadSuccess ls) { return true; }
    finally { jj_save(1, xla); }
  }

  static private boolean jj_2_3(int xla)
 {
    jj_la = xla; jj_lastpos = jj_scanpos = token;
    try { return !jj_3_3(); }
    catch(LookaheadSuccess ls) { return true; }
    finally { jj_save(2, xla); }
  }

  static private boolean jj_2_4(int xla)
 {
    jj_la = xla; jj_lastpos = jj_scanpos = token;
    try { return !jj_3_4(); }
    catch(LookaheadSuccess ls) { return true; }
    finally { jj_save(3, xla); }
  }

  static private boolean jj_2_5(int xla)
 {
    jj_la = xla; jj_lastpos = jj_scanpos = token;
    try { return !jj_3_5(); }
    catch(LookaheadSuccess ls) { return true; }
    finally { jj_save(4, xla); }
  }

  static private boolean jj_2_6(int xla)
 {
    jj_la = xla; jj_lastpos = jj_scanpos = token;
    try { return !jj_3_6(); }
    catch(LookaheadSuccess ls) { return true; }
    finally { jj_save(5, xla); }
  }

  static private boolean jj_2_7(int xla)
 {
    jj_la = xla; jj_lastpos = jj_scanpos = token;
    try { return !jj_3_7(); }
    catch(LookaheadSuccess ls) { return true; }
    finally { jj_save(6, xla); }
  }

  static private boolean jj_2_8(int xla)
 {
    jj_la = xla; jj_lastpos = jj_scanpos = token;
    try { return !jj_3_8(); }
    catch(LookaheadSuccess ls) { return true; }
    finally { jj_save(7, xla); }
  }

  static private boolean jj_2_9(int xla)
 {
    jj_la = xla; jj_lastpos = jj_scanpos = token;
    try { return !jj_3_9(); }
    catch(LookaheadSuccess ls) { return true; }
    finally { jj_save(8, xla); }
  }

  static private boolean jj_2_10(int xla)
 {
    jj_la = xla; jj_lastpos = jj_scanpos = token;
    try { return !jj_3_10(); }
    catch(LookaheadSuccess ls) { return true; }
    finally { jj_save(9, xla); }
  }

  static private boolean jj_2_11(int xla)
 {
    jj_la = xla; jj_lastpos = jj_scanpos = token;
    try { return !jj_3_11(); }
    catch(LookaheadSuccess ls) { return true; }
    finally { jj_save(10, xla); }
  }

  static private boolean jj_2_12(int xla)
 {
    jj_la = xla; jj_lastpos = jj_scanpos = token;
    try { return !jj_3_12(); }
    catch(LookaheadSuccess ls) { return true; }
    finally { jj_save(11, xla); }
  }

  static private boolean jj_2_13(int xla)
 {
    jj_la = xla; jj_lastpos = jj_scanpos = token;
    try { return !jj_3_13(); }
    catch(LookaheadSuccess ls) { return true; }
    finally { jj_save(12, xla); }
  }

  static private boolean jj_2_14(int xla)
 {
    jj_la = xla; jj_lastpos = jj_scanpos = token;
    try { return !jj_3_14(); }
    catch(LookaheadSuccess ls) { return true; }
    finally { jj_save(13, xla); }
  }

  static private boolean jj_2_15(int xla)
 {
    jj_la = xla; jj_lastpos = jj_scanpos = token;
    try { return !jj_3_15(); }
    catch(LookaheadSuccess ls) { return true; }
    finally { jj_save(14, xla); }
  }

  static private boolean jj_2_16(int xla)
 {
    jj_la = xla; jj_lastpos = jj_scanpos = token;
    try { return !jj_3_16(); }
    catch(LookaheadSuccess ls) { return true; }
    finally { jj_save(15, xla); }
  }

  static private boolean jj_2_17(int xla)
 {
    jj_la = xla; jj_lastpos = jj_scanpos = token;
    try { return !jj_3_17(); }
    catch(LookaheadSuccess ls) { return true; }
    finally { jj_save(16, xla); }
  }

  static private boolean jj_2_18(int xla)
 {
    jj_la = xla; jj_lastpos = jj_scanpos = token;
    try { return !jj_3_18(); }
    catch(LookaheadSuccess ls) { return true; }
    finally { jj_save(17, xla); }
  }

  static private boolean jj_2_19(int xla)
 {
    jj_la = xla; jj_lastpos = jj_scanpos = token;
    try { return !jj_3_19(); }
    catch(LookaheadSuccess ls) { return true; }
    finally { jj_save(18, xla); }
  }

  static private boolean jj_2_20(int xla)
 {
    jj_la = xla; jj_lastpos = jj_scanpos = token;
    try { return !jj_3_20(); }
    catch(LookaheadSuccess ls) { return true; }
    finally { jj_save(19, xla); }
  }
